[package]
name = "ironcore-search-helpers"
version = "0.1.0"
authors = ["Colt Frederickson <coltfred@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0-only"
categories = ["cryptography"]
keywords = ["cryptography", "encrypted-search", "search"]
description = "Search helpers for working with encrypted values, particularly on the IronCore platform."
edition = "2018"

[dependencies]
sha2 = "~0.8.1"
regex = "~1.3.4"
lazy_static = "~1.4.0"
itertools = "~0.8.2"
rand = "~0.7.3"
# We pin these so they can't vary accidentially.
unidecode = "=0.3.0"
voca_rs = "=1.9.1"
