[package]
name = "ironcore-search-helpers"
version = "0.2.0"
authors = ["IronCore Labs <code@ironcorelabs.com>"]
readme = "README.md"
license = "AGPL-3.0-only"
categories = ["cryptography"]
keywords = ["cryptography", "encrypted-search", "search"]
description = "Search helpers for working with encrypted values, particularly on the IronCore platform."
edition = "2021"
rust-version = "1.56.0"

[dependencies]
sha2 = "0.10"
lazy_static = "1.4"
itertools = "0.13"
rand = "0.8"
# We pin these so they can't vary accidentally.
unidecode = "=0.3.0"
unicode-segmentation = "=1.12.0"
